# agentos-openshift-template

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
agent-ui/: .dockerignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
agent-ui/src/: store.ts
agent-ui/src/app/: page.tsx
agent-ui/src/components/chat/ChatArea/Messages/: ChatBlankState.tsx
agent-ui/src/hooks/: useAIStreamHandler.tsx
agent-ui/src/types/: os.ts
agents/: agent_ids.py  base_agent.py  ibmi_agents.py
agents/utils/: __init__.py  filtered_mcp_tools.py  model_selector.py  watsonx.py
app/: main.py
deployment/: README.md
deployment/mcpgateway/: .env.example  README.md  docker-compose.yml
deployment/openshift/: README.md  kustomization.yaml
deployment/openshift/apps/openshift/: README.md  kustomization.yaml
deployment/openshift/apps/openshift/ibmi-agent-infra/: kustomization.yaml
deployment/openshift/apps/openshift/ibmi-agent-infra/agent-os-api/: .env.example  (+3 more)
deployment/openshift/apps/openshift/ibmi-mcp-server/: .env.example  Dockerfile  README.md
deployment/openshift/apps/openshift/mcpgateway/: .env.example
deployment/openshift/ibmi-agent-infra/agent-os-api/: api-buildconfig.yaml  api-route.yaml  api-service.yaml
deployment/openshift/ibmi-agent-infra/agent-ui/: agent-ui-deployment.yaml  agent-ui-rolebinding.yaml  agent-ui-route.yaml
deployment/openshift/ibmi-agent-infra/pgvector/: pgvector-buildconfig.yaml  pgvector-deployment.yaml  pgvector-imagestream.yaml  pgvector-rolebinding.yaml  pgvector-serviceaccount.yaml
deployment/openshift/ibmi-mcp-server/: README.md  kustomization.yaml
infra/: .env.example  README.md  config.yaml  config_helper.py  config_manager.py  config_models.py
pgvector/: Dockerfile
scripts/: build_image.sh
tools/: sys-admin.yaml
(+7 files in other folders)
